boarders overflow on sliders fixed

--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -79,8 +79,7 @@
 }
 
 .item_popular {
-  min-height: 0;
-  height: 304px;
+  min-height: 304px;
   padding: 13px 10px; 
 
   .item__image {
@@ -115,7 +114,7 @@
 
 @media (max-width: 1100px) {
   .item_popular {
-    min-height: 332px;
+    // min-height: 332px;
     .item__image {
       height: 200px;
       background-size: auto 180px
